--- a/lab3_hal/lab3_hal.ioc
+++ b/lab3_hal/lab3_hal.ioc
@@ -65,37 +65,43 @@ ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false
-RCC.AHBFreq_Value=16000000
-RCC.APB1Freq_Value=16000000
-RCC.APB1TimFreq_Value=16000000
-RCC.APB2Freq_Value=16000000
-RCC.APB2TimFreq_Value=16000000
+RCC.AHBFreq_Value=100000000
+RCC.APB1CLKDivider=RCC_HCLK_DIV4
+RCC.APB1Freq_Value=25000000
+RCC.APB1TimFreq_Value=50000000
+RCC.APB2CLKDivider=RCC_HCLK_DIV2
+RCC.APB2Freq_Value=50000000
+RCC.APB2TimFreq_Value=100000000
 RCC.CECFreq_Value=32786.88524590164
-RCC.CortexFreq_Value=16000000
-RCC.FCLKCortexFreq_Value=16000000
-RCC.FMPI2C1Freq_Value=16000000
+RCC.CortexFreq_Value=100000000
+RCC.FCLKCortexFreq_Value=100000000
+RCC.FMPI2C1Freq_Value=25000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=16000000
-RCC.IPParameters=AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FMPI2C1Freq_Value,FamilyName,HCLKFreq_Value,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLQCLKFreq_Value,PLLRCLKFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PWRFreq_Value,SAIAFreq_Value,SAIBFreq_Value,SDIOFreq_Value,SYSCLKFreq_VALUE,USBFreq_Value,VCOI2SInputFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIInputFreq_Value,VCOSAIOutputFreq_Value
-RCC.MCO2PinFreq_Value=16000000
-RCC.PLLCLKFreq_Value=96000000
+RCC.HCLKFreq_Value=100000000
+RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FMPI2C1Freq_Value,FamilyName,HCLKFreq_Value,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,PLLRCLKFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PWRFreq_Value,SAIAFreq_Value,SAIBFreq_Value,SDIOFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USBFreq_Value,VCOI2SInputFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIInputFreq_Value,VCOSAIOutputFreq_Value
+RCC.MCO2PinFreq_Value=100000000
+RCC.PLLCLKFreq_Value=100000000
 RCC.PLLI2SPCLKFreq_Value=96000000
 RCC.PLLI2SQCLKFreq_Value=96000000
 RCC.PLLI2SRCLKFreq_Value=96000000
-RCC.PLLQCLKFreq_Value=96000000
-RCC.PLLRCLKFreq_Value=96000000
+RCC.PLLM=8
+RCC.PLLN=100
+RCC.PLLQCLKFreq_Value=100000000
+RCC.PLLRCLKFreq_Value=100000000
 RCC.PLLSAIPCLKFreq_Value=96000000
 RCC.PLLSAIQCLKFreq_Value=96000000
-RCC.PWRFreq_Value=16000000
+RCC.PWRFreq_Value=100000000
 RCC.SAIAFreq_Value=96000000
 RCC.SAIBFreq_Value=96000000
-RCC.SDIOFreq_Value=96000000
-RCC.SYSCLKFreq_VALUE=16000000
-RCC.USBFreq_Value=96000000
+RCC.SDIOFreq_Value=100000000
+RCC.SPDIFRXFreq_Value=100000000
+RCC.SYSCLKFreq_VALUE=100000000
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
+RCC.USBFreq_Value=100000000
 RCC.VCOI2SInputFreq_Value=1000000
 RCC.VCOI2SOutputFreq_Value=192000000
-RCC.VCOInputFreq_Value=1000000
-RCC.VCOOutputFreq_Value=192000000
+RCC.VCOInputFreq_Value=2000000
+RCC.VCOOutputFreq_Value=200000000
 RCC.VCOSAIInputFreq_Value=1000000
 RCC.VCOSAIOutputFreq_Value=192000000
 SH.COMP_DAC1_group.0=DAC_OUT1,DAC_OUT1
