--- a/lab3_hal/lab3_hal.ioc
+++ b/lab3_hal/lab3_hal.ioc
@@ -7,14 +7,18 @@ Mcu.IP0=DAC
 Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SYS
-Mcu.IPNb=4
+Mcu.IP4=TIM2
+Mcu.IPNb=5
 Mcu.Name=STM32F446R(C-E)Tx
 Mcu.Package=LQFP64
-Mcu.Pin0=PA4
-Mcu.Pin1=PA13
-Mcu.Pin2=PA14
-Mcu.Pin3=VP_SYS_VS_Systick
-Mcu.PinsNb=4
+Mcu.Pin0=PH0-OSC_IN
+Mcu.Pin1=PH1-OSC_OUT
+Mcu.Pin2=PA4
+Mcu.Pin3=PA13
+Mcu.Pin4=PA14
+Mcu.Pin5=VP_SYS_VS_Systick
+Mcu.Pin6=VP_TIM2_VS_OPM
+Mcu.PinsNb=7
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F446RETx
@@ -36,6 +40,10 @@ PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
 PA4.Signal=COMP_DAC1_group
+PH0-OSC_IN.Mode=HSE-External-Oscillator
+PH0-OSC_IN.Signal=RCC_OSC_IN
+PH1-OSC_OUT.Mode=HSE-External-Oscillator
+PH1-OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -64,7 +72,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DAC_Init-DAC-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.AHBFreq_Value=100000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 RCC.APB1Freq_Value=25000000
@@ -78,35 +86,45 @@ RCC.FCLKCortexFreq_Value=100000000
 RCC.FMPI2C1Freq_Value=25000000
 RCC.FamilyName=M
 RCC.HCLKFreq_Value=100000000
-RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FMPI2C1Freq_Value,FamilyName,HCLKFreq_Value,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,PLLRCLKFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PWRFreq_Value,SAIAFreq_Value,SAIBFreq_Value,SDIOFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USBFreq_Value,VCOI2SInputFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIInputFreq_Value,VCOSAIOutputFreq_Value
+RCC.HSE_VALUE=20000000
+RCC.I2S1Freq_Value=120000000
+RCC.I2S2Freq_Value=120000000
+RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FMPI2C1Freq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,I2S1Freq_Value,I2S2Freq_Value,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SoutputFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,PLLRCLKFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIoutputFreq_Value,PLLSourceVirtual,PWRFreq_Value,SAIAFreq_Value,SAIBFreq_Value,SDIOFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USBFreq_Value,VCOI2SInputFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIInputFreq_Value,VCOSAIOutputFreq_Value
 RCC.MCO2PinFreq_Value=100000000
 RCC.PLLCLKFreq_Value=100000000
-RCC.PLLI2SPCLKFreq_Value=96000000
-RCC.PLLI2SQCLKFreq_Value=96000000
-RCC.PLLI2SRCLKFreq_Value=96000000
-RCC.PLLM=8
+RCC.PLLI2SPCLKFreq_Value=120000000
+RCC.PLLI2SQCLKFreq_Value=120000000
+RCC.PLLI2SRCLKFreq_Value=120000000
+RCC.PLLI2SoutputFreq_Value=120000000
+RCC.PLLM=10
 RCC.PLLN=100
 RCC.PLLQCLKFreq_Value=100000000
 RCC.PLLRCLKFreq_Value=100000000
-RCC.PLLSAIPCLKFreq_Value=96000000
-RCC.PLLSAIQCLKFreq_Value=96000000
+RCC.PLLSAIPCLKFreq_Value=120000000
+RCC.PLLSAIQCLKFreq_Value=120000000
+RCC.PLLSAIoutputFreq_Value=120000000
+RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.PWRFreq_Value=100000000
-RCC.SAIAFreq_Value=96000000
-RCC.SAIBFreq_Value=96000000
+RCC.SAIAFreq_Value=120000000
+RCC.SAIBFreq_Value=120000000
 RCC.SDIOFreq_Value=100000000
 RCC.SPDIFRXFreq_Value=100000000
 RCC.SYSCLKFreq_VALUE=100000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.USBFreq_Value=100000000
-RCC.VCOI2SInputFreq_Value=1000000
-RCC.VCOI2SOutputFreq_Value=192000000
+RCC.VCOI2SInputFreq_Value=1250000
+RCC.VCOI2SOutputFreq_Value=240000000
 RCC.VCOInputFreq_Value=2000000
 RCC.VCOOutputFreq_Value=200000000
-RCC.VCOSAIInputFreq_Value=1000000
-RCC.VCOSAIOutputFreq_Value=192000000
+RCC.VCOSAIInputFreq_Value=1250000
+RCC.VCOSAIOutputFreq_Value=240000000
 SH.COMP_DAC1_group.0=DAC_OUT1,DAC_OUT1
 SH.COMP_DAC1_group.ConfNb=1
+TIM2.IPParameters=Prescaler
+TIM2.Prescaler=10000
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM2_VS_OPM.Mode=OPM_bit
+VP_TIM2_VS_OPM.Signal=TIM2_VS_OPM
 board=custom
 isbadioc=false
