--- a/lab3_hal/lab3_hal.ioc
+++ b/lab3_hal/lab3_hal.ioc
@@ -86,38 +86,38 @@ RCC.FCLKCortexFreq_Value=100000000
 RCC.FMPI2C1Freq_Value=25000000
 RCC.FamilyName=M
 RCC.HCLKFreq_Value=100000000
-RCC.HSE_VALUE=20000000
-RCC.I2S1Freq_Value=120000000
-RCC.I2S2Freq_Value=120000000
+RCC.HSE_VALUE=8000000
+RCC.I2S1Freq_Value=48000000
+RCC.I2S2Freq_Value=48000000
 RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FMPI2C1Freq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,I2S1Freq_Value,I2S2Freq_Value,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SoutputFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,PLLRCLKFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIoutputFreq_Value,PLLSourceVirtual,PWRFreq_Value,SAIAFreq_Value,SAIBFreq_Value,SDIOFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USBFreq_Value,VCOI2SInputFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIInputFreq_Value,VCOSAIOutputFreq_Value
 RCC.MCO2PinFreq_Value=100000000
 RCC.PLLCLKFreq_Value=100000000
-RCC.PLLI2SPCLKFreq_Value=120000000
-RCC.PLLI2SQCLKFreq_Value=120000000
-RCC.PLLI2SRCLKFreq_Value=120000000
-RCC.PLLI2SoutputFreq_Value=120000000
-RCC.PLLM=10
+RCC.PLLI2SPCLKFreq_Value=48000000
+RCC.PLLI2SQCLKFreq_Value=48000000
+RCC.PLLI2SRCLKFreq_Value=48000000
+RCC.PLLI2SoutputFreq_Value=48000000
+RCC.PLLM=4
 RCC.PLLN=100
 RCC.PLLQCLKFreq_Value=100000000
 RCC.PLLRCLKFreq_Value=100000000
-RCC.PLLSAIPCLKFreq_Value=120000000
-RCC.PLLSAIQCLKFreq_Value=120000000
-RCC.PLLSAIoutputFreq_Value=120000000
+RCC.PLLSAIPCLKFreq_Value=48000000
+RCC.PLLSAIQCLKFreq_Value=48000000
+RCC.PLLSAIoutputFreq_Value=48000000
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.PWRFreq_Value=100000000
-RCC.SAIAFreq_Value=120000000
-RCC.SAIBFreq_Value=120000000
+RCC.SAIAFreq_Value=48000000
+RCC.SAIBFreq_Value=48000000
 RCC.SDIOFreq_Value=100000000
 RCC.SPDIFRXFreq_Value=100000000
 RCC.SYSCLKFreq_VALUE=100000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.USBFreq_Value=100000000
-RCC.VCOI2SInputFreq_Value=1250000
-RCC.VCOI2SOutputFreq_Value=240000000
+RCC.VCOI2SInputFreq_Value=500000
+RCC.VCOI2SOutputFreq_Value=96000000
 RCC.VCOInputFreq_Value=2000000
 RCC.VCOOutputFreq_Value=200000000
-RCC.VCOSAIInputFreq_Value=1250000
-RCC.VCOSAIOutputFreq_Value=240000000
+RCC.VCOSAIInputFreq_Value=500000
+RCC.VCOSAIOutputFreq_Value=96000000
 SH.COMP_DAC1_group.0=DAC_OUT1,DAC_OUT1
 SH.COMP_DAC1_group.ConfNb=1
 TIM2.IPParameters=Prescaler
@@ -127,4 +127,4 @@ VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM2_VS_OPM.Mode=OPM_bit
 VP_TIM2_VS_OPM.Signal=TIM2_VS_OPM
 board=custom
-isbadioc=false
+isbadioc=true
